// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Container DeleteResource should render with proper resourceInfo params 1`] = `
<ConfirmDialog
  cancelAction={
    Object {
      "actionCreator": "deleteResource:cancel",
      "id": "dialog:delete:cancel",
      "label": "No",
      "model": Object {
        "resourceInfo": Object {
          "found": true,
          "id": "myResourceID",
          "label": "myLabel",
          "resourceType": "myResourceType",
          "resourceTypeLabel": "resourceLabel",
          "uri": "/myEndpoint",
        },
      },
      "onClick": [Function],
    }
  }
  header="My header title"
  show={true}
  validateAction={
    Object {
      "actionCreator": "deleteResource:validate",
      "bsStyle": "danger",
      "id": "dialog:delete:validate",
      "label": "Yes",
      "model": Object {
        "resourceInfo": Object {
          "found": true,
          "id": "myResourceID",
          "label": "myLabel",
          "resourceType": "myResourceType",
          "resourceTypeLabel": "resourceLabel",
          "uri": "/myEndpoint",
        },
      },
      "onClick": [Function],
    }
  }
>
  <div>
    Are you sure you want to remove the resourceLabel
     
    <strong>
      myLabel
    </strong>
    ?
  </div>
</ConfirmDialog>
`;

exports[`Container DeleteResource should render with wrong resourceInfo params 1`] = `
<ConfirmDialog
  cancelAction={
    Object {
      "actionCreator": "deleteResource:cancel",
      "id": "dialog:delete:cancel",
      "label": "No",
      "model": Object {
        "resourceInfo": Object {
          "found": false,
          "id": "myResourceID",
          "label": "",
          "resourceType": "unknownResourceType",
          "resourceTypeLabel": "unknownResourceType",
          "uri": "/myEndpoint",
        },
      },
      "onClick": [Function],
    }
  }
  header="My header title"
  show={true}
  validateAction={
    Object {
      "actionCreator": "deleteResource:validate",
      "bsStyle": "danger",
      "id": "dialog:delete:validate",
      "label": "Yes",
      "model": Object {
        "resourceInfo": Object {
          "found": false,
          "id": "myResourceID",
          "label": "",
          "resourceType": "unknownResourceType",
          "resourceTypeLabel": "unknownResourceType",
          "uri": "/myEndpoint",
        },
      },
      "onClick": [Function],
    }
  }
>
  <div>
    Are you sure you want to remove the unknownResourceType
     
    <strong />
    ?
  </div>
</ConfirmDialog>
`;
